<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">useJar</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="baudRate">Baud rate</string>
    <string name="baud_rate_str">Baud rate</string>  
    <string name="stop_bit">StopBits</string>  
    <string name="data_bit">DataBits</string>
    <string name="parity_str">Parity</string>
    <string name="flow">Flow</string>
  <!--   <string name="time_out_str">TimeOut</string>   -->
    <string name="time">时间</string>
    <string name="temperature">温度</string>
    <string name="Power">ON/OFF</string>
    <string name="set">SET</string>
    <string name="open">Open</string>
    <string name="clear">Clear</string>
    <string name="hint">Receive Buffer is Empty!</string>

</resources>
